# Hackathon-0_Personal-AI-Employee-project

./: .gitignore  =3.8.0  CLAUDE.md  DEPLOYMENT.md  Email_mcp_server.md  FTE_Hackathon_Summary.md  Personal_AI_Employee_Hackathon_0_ Building_Autonomous_FTEs_in_2026.md  SILVER_TIER_IMPLEMENTATION_SUMMARY.md  Silver_Tier_Manual_Testing_Guide.md  email.json  mcp_cli_interface.py  orchestrator.py  package.json  pyproject.toml  requirements.txt  run_gmail_fixed.py  send_email_cli.py  test_mcp_connection.py
AI_Employee/: Company_Handbook.md  Dashboard.md
bronze_tier_test/: run_gmail_fixed.py  test_gmail_auth.py  test_gmail_watcher.py
gold_tier_tests/: test_odoo_list_invoices.py  test_t020_approval_workflow.py  test_t021_structured_logging.py  test_t022_circuit_breaker.py  test_t023_readme_validation.py  test_t023a_e_dry_run_mode.py
silver_tier_test/: test_acceptance.py  test_approval_workflow.py  test_complete_workflow.py  test_concurrent_watchers.py  test_end_to_end.py  test_error_handling_formats.py  test_linkedin_functionality.py  test_plan_functionality.py  test_search_attachments_functionality.py  test_send_email_functionality.py
templates/: Plan.md.template
utils/: action_executor.py  audit_generator.py  ceo_briefing_generator.py  conflict_resolver.py  file_utils.py  gmail_to_odoo_parser.py  health_monitor.py  io_optimizer.py  linkedin_post_generator.py  linkedin_post_scheduler.py  odoo_client.py  plan_generator.py  plan_updater.py  resource_monitor.py  retry_handler.py  sensitive_content_detector.py  setup_logger.py  social_media_manager.py
(+61 files in other folders)
