[project]
name = "hackathon-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "apscheduler>=3.10.0",
    "facebook-sdk>=3.1.0",
    "google-api-python-client>=2.108.0",
    "google-auth>=2.23.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.1.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "tweepy>=4.14.0",
    "watchdog>=4.0.0",
]
